--- a/frontend/public/src/components/common/footer/Footer.css
+++ b/frontend/public/src/components/common/footer/Footer.css
@@ -32,9 +32,10 @@ footer {
 @media (prefers-color-scheme: dark) {
     .testausserveriLogo {
         filter: invert(1);
+        opacity: 0.7;
     }
     .attributions {
-        color: rgba(255,255,255,0.82);
+        color: rgba(255,255,255,0.72);
     }
     hr {
         border-bottom: 1px solid #333;
