--- a/frontend/public/src/components/common/header/Header.css
+++ b/frontend/public/src/components/common/header/Header.css
@@ -5,7 +5,8 @@ header {
 }
 
 header .logoContainer img {
-    height: 70px;
+    max-height: 70px;
+    content: url('../../../assets/logo.png');
 }
 
 header nav {
@@ -55,7 +56,7 @@ header li:not(.selected):hover {
         background-color: #3d3d3d;
     }
     header .logoContainer{
-        filter: invert(1);
+        content: url('../../../assets/logodark.png');
     }
     header li.selected:hover {
         background-color: #525252;
